Mon May 19 18:53:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Added dependencies so that the executable gets relinked when
          one of the libraries change

Mon May 19 14:29:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Build subdirs before subprojects

Wed May 14 18:32:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26.mpd:
        * templates/wb26wrproject.mpd:
          Limit the cases subprojects are used

Tue May 13 18:32:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Removed SUB_OBJECTS again, it only works when the libs are specified
          with a full path

        * templates/wb26wrmakefile.mpd:
          Generate DEPLIBS, should be added to the dependencies of the
          partialImage but we have to figure out where to plug this into
          the workbench

Tue May 13 16:47:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Improved clean speed

Tue May 13 14:28:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          When generating with standard_build set SUB_OBJECTS to PARTIAL_LIBS
          this way an executable is dependent on its libs, when the libs
          change the executable gets relinked. Also moved some settings
          to the global settings instead of storing them per build spec

Sun May 11 19:38:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/templates/wb26.txt:
        * templates/wb26.mpd:
        * templates/wb26wrproject.mpd:
          Added enable_subprojects which has to be set as value_template
          to turn on the generation of subprojects because subprojects
          can cause long compile/clean times when using standard
          build support
