@@ -1,3 +1,14 @@
+Wed May 21 11:43:19 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * clone_build_tree.pl:
+
+          Removed cloned directories that had files previously, but have now
+          become empty.
+
+        * prj_install.pl:
+
+          Added support for installing MinGW libraries.
+
 Mon May 19 18:53:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * templates/wb26wrmakefile.mpd:
